syntax = "proto3";

package guru.transwap.v1;

option go_package = "github.com/gurufinglobal/guru/v2/x/ibc/transwap/types";

import "guru/transwap/v1/token.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

// FungibleTokenPacketData defines a struct for the packet payload
// See FungibleTokenPacketData spec:
// https://github.com/cosmos/ibc/tree/master/spec/app/ics-020-fungible-token-transfer#data-structures
message FungibleTokenPacketData {
  // the packet type defines whether it is transfer packet or exchange
  string exchange_id = 1;
  // the token denomination to be transferred
  string denom = 2;
  // the token amount to be transferred
  string amount = 3;
  // the sender address
  string sender = 4;
  // the recipient address on the destination chain
  string receiver = 5;
  // optional memo
  string memo = 6;
}

// TransferPacketData defines the a struct for transfer details
message TransferPacketData {
  // the port on which the packet will be sent
  string source_port = 1;
  // the channel by which the packet will be sent
  string source_channel = 2;
  // token to be transferred
  Token token = 3 [(gogoproto.nullable) = false];
  // the sender address
  string sender = 4;
  // the recipient address on the destination chain
  string receiver = 5;
  // Timeout timestamp in absolute nanoseconds since unix epoch.
  // If you are sending with IBC v1 protocol, either timeout_height or timeout_timestamp must be set.
  // If you are sending with IBC v2 protocol, timeout_timestamp must be set.
  uint64 timeout_timestamp = 6;
  // optional memo
  string memo = 7;
  // calculated fee
  cosmos.base.v1beta1.Coin fee = 8 [(gogoproto.nullable) = false];
  // exvhange id
  string exchange_id = 9;
}